<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MapDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="5dp">

        <LinearLayout
            android:id="@+id/tv_name_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_name_val"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nan"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/tv_area_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/area"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_area_val"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nan"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/tv_street_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/street"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_street_val"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nan"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/tv_building_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/building"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_building_val"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nan"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/tv_quantity_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_quantity_val"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nan"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tv_type_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_type_val"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nan"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />
        </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="bottom"
            android:padding="10dp">

            <!--<Button-->

                <!--android:id="@+id/bt_chat"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_gravity="bottom"-->
                <!--android:background="@color/colorAccent"-->
                <!--android:layout_marginBottom="10dp"-->
                <!--android:text="Chat"-->
                <!--android:textColor="#EEEEEE"-->
                <!--android:textSize="20sp" />-->


            <Button

                android:id="@+id/bt_confirm_delivery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@color/colorAccent"
                android:text="Confirm delivery"
                android:textColor="#EEEEEE"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>
